# nbody

./: CMakeLists.txt
src/: CMakeLists.txt  backend.cpp  backend.h  canvas.cpp  canvas.h  dynamic_buffer.cpp  dynamic_buffer.h  main.cpp  resources.qrc  simulation_data.cpp  simulation_data.h  simulation_object_ui_data_type.h  simulator.cpp
src/contents/ui/: main.qml  settings.qml  status.qml
src/shaders/renderer/: fragment.glsl  vertex.glsl
src/shaders/simulator/: simulator.glsl
